# Ancestral-Property-Server

./: .gitignore  CMakeLists.txt  README.md  client.cpp  dbserver.cpp  gate_server.cpp  logic_server.cpp
lib/: singleton.h  time_util.h
logic/: logic_frame.cpp  logic_frame.h  logic_room.cpp  logic_room.h
model/: QueryResult.h  User.h
mysqllib/: MySQLManager.h  MySQLManager.tpp  StatementFactory.h
network/: ByteStream.h  Message.cpp  Message.h  TcpConnection.cpp  TcpConnection.h  TcpManager.cpp  TcpManager.h  message_types.h  message_utils.h
protobuf/: frame.proto  login.proto  model.proto  protobuf_types.h  room_event.proto
protobuf/proto_out_c/: frame.pb.cc  frame.pb.h  login.pb.cc  login.pb.h  model.pb.cc  model.pb.h  room_event.pb.cc  room_event.pb.h
protobuf/proto_out_cs/: Frame.cs  Login.cs  Model.cs  RoomEvent.cs
src/Header/: CenterServer.h  DBServer.h  Encryption.hpp  EnumHome.h  FrameMgr.h  FuncServer.h  GateServer.h  LogicServer.h  Message.h  MessageUtils.h  ObjectPool.h  Profile.h  Proto.h  Room.h  ServerBase.h  Singleton.h  profile.h
src/Header/Message/: Message.h  MessageUtils.h
src/Header/Server/: CenterServer.h  DBServer.h  FuncServer.h  LogicServer.h  ServerBase.h
src/Header/Tool/: ConstPool.h  RingBuffer.h  Singleton.h
src/Logic/: LogicServer.h  Room.cpp  Room.h
src/Protobuf/: Frame.pb.cc  Frame.pb.h  Frame.proto  Login.pb.cc  Login.pb.h  Login.proto  NetworkData.pb.cc  NetworkData.pb.h  NetworkData.proto  Room.pb.cc  Room.pb.h  Room.proto  Server.pb.cc  Server.pb.h  Server.proto
src/Source/: CenterServer.cpp  DBServer.cpp  FuncServer.cpp  GateServer.cpp  LogicServer.cpp  ServerBase.cpp
src/Tool/: ConstPool.cpp  EpollMgr.cpp  Event.cpp  FrameMgr.cpp  Message.cpp  ObjectPool.cpp  ProtoUtil.cpp  RingBuffer.cpp  RingBuffer.h  Room.cpp  SqlHelper.cpp  ThreadSafetyQueue.cpp  Timer.cpp  WIP.cpp
src/Tool/Helper/: JsonHelper.cpp  SqlHelper.cpp
src/Tool/lib_json/: json_reader.cpp  json_value.cpp  json_writer.cpp
src/ini/: Net.json  Room.json  Server.json  ini.json
